# tp-opencode

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.bat  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  tp-opencode.spec
.github/workflows/: ci.yml  publish.yml
scripts/: setup.sh
src/opencode_telegram_bot/: __init__.py  gui.py  launcher.py  main.py
src/opencode_telegram_bot/api/: __init__.py  client.py  server.py
src/opencode_telegram_bot/bot/: __init__.py  handler.py
src/opencode_telegram_bot/core/: __init__.py  config.py  session.py
src/opencode_telegram_bot/locales/de/: messages.json
src/opencode_telegram_bot/locales/en/: messages.json
src/opencode_telegram_bot/locales/es/: messages.json
src/opencode_telegram_bot/locales/fr/: messages.json
src/opencode_telegram_bot/locales/ru/: messages.json
src/opencode_telegram_bot/locales/zh/: messages.json
src/opencode_telegram_bot/utils/: __init__.py  i18n.py  logger.py  scheduler.py  voice.py
src/opencode_telegram_bot/web/: __init__.py  gui.py
tests/: __init__.py  test_api.py  test_core.py  test_i18n.py
